--- a/estilo.css
+++ b/estilo.css
@@ -5,12 +5,40 @@
 
 /* Navbar links */
 #barraNav a {
+
   float: left;
   display: block;
   color: #f2f2f2;
-  text-align: center;
+  text-align: justify;
   padding: 14px;
   text-decoration: none;
+  text-align: justify;
+}
+
+/*diseños div de las orillas*/
+#a{
+	width: 5%;
+	height: 1000pt;
+  background-image: url(img/fondo.jpg);
+    
+float: right;
+}
+/**/
+#a1{
+	width: 5%;
+	height: 1000pt;
+  background-image: url(img/fondo.jpg);
+float: left;
+}
+
+/*diseño de la parete centrarl*/
+section{
+	width: 95%;
+	height: 1000pt;
+	background:lightblue;
+  background-image: url(img/f2.jpg);
+float: center;
+
 }
 
 /* Page content */
@@ -31,7 +59,7 @@
 }
 
 #intro{
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'Arial Unicode MS', Courier, monospace;
 }
 
 
@@ -43,12 +71,18 @@
 
 /* Position the image container (needed to position the left and right arrows) */
 .container {
+
   position: relative;
+  
 }
+/**/
+
 
 /* Hide the images by default */
 .mySlides {
   display: none;
+  padding-left: 33%;
+  
 }
 
 /* Add a pointer when hovering over the thumbnail images */
@@ -71,6 +105,7 @@
   border-radius: 0 3px 3px 0;
   user-select: none;
   -webkit-user-select: none;
+  border-color: black;
 }
 
 /* Position the "next button" to the right */
@@ -83,6 +118,7 @@
 .prev:hover,
 .next:hover {
   background-color: rgba(0, 0, 0, 0.8);
+
 }
 
 /* Number text (1/3 etc) */
@@ -111,7 +147,7 @@
 /* Six columns side by side */
 .column {
   float: left;
-  width: 16.66%;
+  width: 15.66%;
 }
 
 /* Add a transparency effect for thumnbail images */
