--- a/estilo2.css
+++ b/estilo2.css
@@ -1,56 +1,72 @@
 .banner {
-    width: 100%;
-    height: 400px; 
-    overflow: hidden;
-    position: relative;
-  } 
-  
-  .banner img {
-    width: 100%;
-    height: 400px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0;
-    transition: opacity 1s ease-in-out;
-  }
-  
-  .banner img.active {
-    opacity: 1;
-  }
-#barraNav {
-    overflow: hidden;
-    background-color: #333;
-    
-  }
-          /* Navbar links */
-  #barraNav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px;
-    text-decoration: none;
-  }
-  
+  width:100%;
+  height: 400px; 
+  overflow: hidden;
+  position: relative;
+} 
+body{
+  background-image: url(img/fp.jpg);
+}
+.banner img {
+  width: 100%;
+  height: 400px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
 
-  .titulo{
-      text-align: center;
-      font-size: 2em;
-      margin: 0 0 1em ;
-      clear: left;
-  }
-  .imagen1{
-      width: 320px;
-      float:left;
-      margin: 0px 50px 20px 200px;
-      transition: 400ms;
-      box-shadow: 10px 10px 30px 15px #000000;
-  }
-#ver{
+.banner img.active {
+  opacity: 1;
+}
+#barraNav {
+  overflow: hidden;
+  background-color: #333;
+  
+}
+/**/
+#txt{
+  border: 5px solid ;
+  padding-left: 50pt;
+  background: linear-gradient(90deg, rgba(231,10,10,1) 0%, rgba(248,242,10,1) 25%, rgba(16,234,189,1) 63%, rgba(253,131,64,1) 100%);
+  box-sizing: border-box;
+}
+
+
+        /* Navbar links */
+#barraNav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+
+
+.titulo{
+
     text-align: center;
-    padding-top: 300px;
-    font-size: xx-large;
+    font-size: 2em;
+    margin: 0 0 1em ;
+    clear: left;
+}
+.imagen1{
+    width: 320px;
+    float:left;
+    margin: 0px 50px 20px 200px;
+    transition: 400ms;
+    box-shadow: 10px 10px 30px 15px #000000;
+    border: 5px solid rebeccapurple;
+
+
+    
+}
+#ver{
+  text-align: center;
+  padding-top: 300px;
+  font-size: xx-large;
 }
 
 
@@ -58,61 +74,64 @@
 
 
 .container {
-    text-align: center;
-    margin-top: 50px;
-    border-collapse: collapse;
-    width: 100%; /* Hacer que la tabla ocupe todo el ancho disponible */
-  }
-  
-  .cell {
-    width: 33.33%; /* Distribuir el espacio igualmente entre las celdas */
-  }
-  
-  .image-container {
-    position: relative;
-    display: inline-block;
-    margin: 10px;
-    text-align: center; /* Centrar el contenido dentro del contenedor de la imagen */
-  }
-  
-  h3 {
-    color: #333;
-    font-size: 20px;
-  }
-  
-  .text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    font-size: 18px;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-  }
-  
-  .hidden-text {
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: rgba(0, 0, 0, 0.8);
-    color: white;
-    padding: 10px;
-    border-radius: 5px;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-  }
-  
-  .image-container:hover .text {
-    opacity: 1;
-  }
-  
-  .image-container:hover .hidden-text {
-    top: calc(100% + 10px); /* Muestra el cuadro debajo de la imagen */
-    opacity: 1;
-  }
-  
+
+  text-align: center;
+  margin-top: 0px;
+  border-collapse: collapse;
+  width: min-content; /* Hacer que la tabla ocupe todo el ancho disponible */
+}
+
+.cell {
+  width: 33.33%; /* Distribuir el espacio igualmente entre las celdas */
+}
+
+.image-container {
+
+
+  position: relative;
+  display: inline-block;
+  margin: 10px;
+  text-align: center; /* Centrar el contenido dentro del contenedor de la imagen */
+}
+
+h3 {
+  color: #333;
+  font-size: 20px;
+}
+
+.text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 18px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.hidden-text {
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.image-container:hover .text {
+  opacity: 1;
+}
+
+.image-container:hover .hidden-text {
+  top: calc(100% + 10px); /* Muestra el cuadro debajo de la imagen */
+  opacity: 1;
+}
+
 
 
 
@@ -120,55 +139,55 @@
 
 
 /*
-  .container {
-    text-align: center;
-    margin-top: 100px;
-    padding-right: 200PX;
-    border-collapse: collapse;
-  }
-  
-  .image-container {
-    text-align: center;
-    position: relative;
-    display: inline-block;
-    margin: 10px;
-  }
-  
-  h3 {
-    color: #333;
-    font-size: 20px;
-  }
-  
-  .text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    font-size: 18px;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-  }
-  
-  .hidden-text {
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: rgba(0, 0, 0, 0.8);
-    color: white;
-    padding: 10px;
-    border-radius: 5px;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-  }
-  
-  .image-container:hover .text {
-    opacity: 1;
-  }
-  
-  .image-container:hover .hidden-text {
-    top: calc(100% + 10px); /* Muestra el cuadro debajo de la imagen */
- 
+.container {
+  text-align: center;
+  margin-top: 100px;
+  padding-right: 200PX;
+  border-collapse: collapse;
+}
 
- /*
+.image-container {
+  text-align: center;
+  position: relative;
+  display: inline-block;
+  margin: 10px;
+}
+
+h3 {
+  color: #333;
+  font-size: 20px;
+}
+
+.text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 18px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.hidden-text {
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.image-container:hover .text {
+  opacity: 1;
+}
+
+.image-container:hover .hidden-text {
+  top: calc(100% + 10px); /* Muestra el cuadro debajo de la imagen */
+
+
+/*
