--- a/estilo3.css
+++ b/estilo3.css
@@ -62,8 +62,8 @@
       font-weight:bold; 
       font-size: 100px; 
       color: #EBD758; 
-      text-shadow: -1px 0 #414D68, 0 1px #414D68, 1px 0 #414D68, 0 -1px #414D68, -2px 2px 0 #414D68, 2px 2px 0 #414D68, 1px 1px #414D68, 2px 2px #414D68, 3px 3px #414D68, 4px 4px #414D68, 5px 5px #414D68;  #414D68,  7px #414D68, 8px 8px #414D68, 9px 9px #414D68;
-  }
+      text-shadow: -1px 0 #414D68, 0 1px #414D68, 1px 0 #414D68, 0 -1px #414D68, -2px 2px 0 #414D68, 2px 2px 0 #414D68, 1px 1px #414D68, 2px 2px #414D68, 3px 3px #414D68, 4px 4px #414D68, 5px 5px #414D68;  #414D68,   #414D68,   #414D68,   #414D68
+  
   .imagen1{
       width: 520px;
       float:left;
@@ -214,4 +214,5 @@
     top: calc(100% + 10px); /* Muestra el cuadro debajo de la imagen */
   
   
-  /*
+}
+
