--- a/estilo2.css
+++ b/estilo2.css
@@ -5,7 +5,10 @@
   position: relative;
 } 
 body{
-  background-image: url(img/fp.jpg);
+  /*background-image: url(img/fp.jpg);
+  */
+  background-color: #588100;
+  
 }
 .banner img {
   width: 100%;
@@ -138,7 +141,7 @@ h3 {
   font-family: Arial Black; 
   font-weight: bold; 
   font-size: 100px; 
-  color: #fff; 
+  color: black; 
   text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
 }
 #mapa1{
@@ -148,7 +151,65 @@ h3 {
 }
 
 
-
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+}
+.gallery img {
+  width: 100%;
+  height: auto;
+  max-width: 300px;
+  
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.section {
+  
+  padding: 20px;
+  margin: 20px 0;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.section h1 {
+  color: #333;
+  font-size: 24px;
+  
+  padding-bottom: 10px;
+}
+.section p, .section ul {
+  color: black;
+  font-size: 30px;
+  line-height: 1.6;
+}
+.section ul {
+  list-style-type: disc;
+  padding-left: 20px;
+}
+.section ul li {
+  margin-bottom: 10px;
+}
+footer {
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+  margin-top: 40px;
+}
+footer .credits {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
+footer .credits div {
+  margin: 10px;
+}
+footer .credits img {
+  max-width: 100px;
+  height: auto;
+}
 
 
 
